# mcp-qliksense-medicair

./: ANALISI_PROGETTO.md  AVVIO_SERVER.md  DEPLOY_RENDER.md  pyproject.toml  render.yaml
qlik_sense_mcp_server/: cloud_api.py  config.py  engine_api.py  http_server.py  repository_api.py  server.py
